Split Bach API into dedicated builders
Closes #148